# neatsheets

./: .gitignore  pyproject.toml
neatsheets/: app.py  language.py  platform.py  sheet.py  task.py  utils.py  webserver.py
neatsheets/data/en/: excel_mac.csv  excel_pc.csv
neatsheets/scripts/: scrape_excel.py
neatsheets/static/apps/en/excel/: app.toml  excel_mac.csv  excel_pc.csv
neatsheets/static/apps/en/firefox/: app.toml  firefox_mac.csv
neatsheets/static/css/: main.css
neatsheets/templates/: app.html  sheet.html  sheet_table.html
resources/shortcuts/en/: firefox_mac.csv
